--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,7 @@
                         <li><a data-scroll href="#overview">Conferência</a></li>
                         <li><a data-scroll href="#sponsors">Patrocinadores</a></li>
                         <li><a data-scroll href="#register">Inscrição</a></li>
+                        <li><a data-scroll href="#contact">Contato</a></li>
                         <li><a data-scroll href="#venue">Local</a></li>
                     </ul>
                 </nav>
@@ -132,6 +133,17 @@
                             </p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+          <!-- CONTACT -->
+          <section id="contact">
+            <div class="contact row">
+                <div class="text-align-center row desktop-12 padding-top-2 min-h-14 container">
+                	<h2>Contato</h2>
+                	<h3>Entre em contato Conosco!</h3>
+                	<a class="btn-basic btn-green" href="/contact/">Entre em contato</a>
                 </div>
             </div>
         </section>
