Reply do Contact Final

--- a/templates/index.html
+++ b/templates/index.html
@@ -140,7 +140,7 @@
             <div class="contact row">
                 <div class="text-align-center row desktop-12 padding-top-2 min-h-14 container">
                 	<h3>Entre em contato Conosco!</h3>
-                	<a class="btn-basic btn-green" href="/contact/">Entre em contato</a>
+                	<a class="btn-basic btn-green" href="{% url 'contact:new' %}">Entre em contato</a>
                 </div>
             </div>
         </section>
